# gogett-hub

./: .editorconfig  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOGETT.md  Makefile  README.md  SECURITY.md  install.ps1  install.sh  pyright.toml
agentbox/: Dockerfile  Dockerfile.runtime  README.md  pyproject.toml
agentbox-client/: pyproject.toml
agentbox-client/agentbox_client/: client.py
agentbox-client/agentbox_client/apps/: function_executor.py
agentbox-client/openapi/: agentbox-manager.openapi.json
agentbox-client/tests/: test_client_auth_headers.py
agentbox/agentbox/: __init__.py  apps.py  config.py  endpoint_state.py  endpoint_transport.py  event_catalog.py  function_executor.py  function_executor_worker.py  kubernetes.py  lifecycle_manager.py  observability.py  runtime_kernel.py  runtime_proxy.py  runtime_server.py  schemas.py  server.py  state.py  telemetry.py
agentbox/agentbox/api/: app.py  apps.py  deps.py  lifecycle.py  sandboxes.py  sessions.py
agentbox/agentbox/providers/: __init__.py  base.py  cloud_config.py  daytona.py  docker.py  e2b.py  errors.py  legacy.py  models.py  podman.py  protocol.py  registry.py
agentbox/agentbox/state_store/: __init__.py  factory.py  migrations.py  models.py  postgres.py  protocol.py  sqlite.py
agentbox/docs/: architecture.md
agentbox/scripts/: start-browser.sh  start-runtime.sh
agentbox/tests/: conftest.py  test_app_proxy_timeout.py  test_async_state_store.py  test_cloud_provider_contract.py  test_docker_provider.py  test_endpoint_state.py  test_function_executor.py  test_health_endpoints.py  test_kubernetes_provider.py  test_lifecycle_manager.py  test_observability.py  test_provider_contract.py  test_runtime_boundaries.py  test_structured_logging.py  test_telemetry.py  test_workspace_contract.py
agentbox/tests/e2e/: conftest.py  test_e2b_real_e2e.py  test_function_executor_e2e.py  test_local_providers_real_e2e.py  test_manager_lifecycle_e2e.py  test_runtime_sessions_e2e.py  test_runtime_tools_e2e.py
desktop/: Cargo.toml  Info.plist  README.md  tauri.conf.json  tauri.dist.conf.json
desktop/scripts/: build-sidecar.sh
desktop/src/: main.rs
desktop/ui/: concepts.gen.json  index.html
lemma-backend/: .coveragerc  Dockerfile  Makefile  README.md  agent_tool_schemas.json  architecture-baseline.json  conftest.py  docker-compose.otel-debug.yml  docker-compose.yml  otel-collector-debug.yaml  pyproject.toml  pytest.ini  sitecustomize.py  standalone_app.py
lemma-backend/app/: app.py  auth_app.py  events.py  scheduler.py  standalone.py  version.py  worker.py
lemma-backend/app/composition/: __init__.py  agent_context_models.py  agent_datastore.py  agent_functions.py  agent_pod.py  agent_surface_runtime.py  agent_usage.py  agent_workspace.py  authorization.py  connector_identity.py  function_workspace.py  icons.py  identity_notifications.py  pod_bundle_apps.py  pod_bundle_pod.py  pod_bundle_readme.py  pod_bundle_resources.py  pod_identity.py  pod_identity_wiring.py  schedule_connectors.py  schedule_filter.py  schedule_targets.py  surface_agent.py  surface_connectors.py  surface_datastore.py  surface_identity.py  surface_schedule.py  widget_content.py  workflow_agent.py  workflow_function.py  workflow_pod.py  workflow_schedule_runtime.py  workflow_scheduler.py  workspace_identity.py
lemma-backend/app/core/: config.py  file_types.py  html_document.py  object_storage.py  redaction.py  request_context.py  runtime_config.py  security.py  settings_env.py  test_html_document.py  test_runtime_config.py  test_utils.py  widget_html_validation.py
lemma-backend/docs/modules/: README.md  agent.md  agent_surfaces.md  apps.md  connectors.md  datastore.md  function.md  icon.md  identity.md  issues.md  pod.md  pod_bundle.md  route-inventory.md  schedule.md  usage.md  workflow.md  workspace.md
lemma-backend/docs/operators/: datastore-ingestion-benchmark.md  object-storage.md  reliability.md
lemma-backend/lemma-connectors/: pyproject.toml
lemma-backend/lemma-connectors/openapi_specs/: slack.json
lemma-backend/lemma-connectors/scripts/: generate_resource_operations.py
lemma-backend/load_tests/: datastore_ingestion.py  docker-compose.datastore.yml  docker-compose.load-test.yml  journey.js  postgres-init.sh  test_datastore_ingestion.py
lemma-backend/migrations/: env.py
lemma-backend/migrations/versions/: 2026-06-24_baseline_schema_0001_baseline.py  2026-06-29_add_pod_imports_0002_pod_imports.py  2026-07-01_accounts_multiple_0002.py  2026-07-01_surfaces_rework_0002.py  2026-07-03_add_http_request_to_connector_operations_0002.py  2026-07-05_add_auth_config_id_to_operations_0004.py  2026-07-05_connectors_kinds_0003.py  2026-07-05_rename_http_request_to_execution_0003.py  2026-07-08_identity_email_normalization_0003.py  2026-07-10_backend_reliability_0003.py  2026-07-11_datastore_file_integrity_0004.py  (+4 more)
lemma-backend/scripts/: agent_surfaces_coverage_report.py  backend_coverage_report.py  check_architecture.py  check_coverage_thresholds.py  connector_profile_operations.json  export_agent_tool_schemas.py  generate_route_inventory.py  import_connector_catalog.py  lemma_apps_config.json  otel_smoke.py  reconcile_auth_users.py  verify_reliability_migration.py
lemma-pod-bundle/: README.md  pyproject.toml
lemma-pod-bundle/lemma_pod_bundle/: __init__.py  apply_fields.py  bundle.py  diff.py  jsonc.py  layout.py  limits.py  normalize.py  portability.py  requirements.py
lemma-pod-bundle/tests/: test_diff.py  test_normalize.py  test_portability.py  test_requirements.py
lemma-python/: README.md  pyproject.toml
lemma-python/lemma_sdk/: __init__.py  _spec_info.py  config.py  openapi_spec.json
lemma-python/tests/: test_files_write.py  test_sdk_connectors.py  test_sdk_conversations.py  test_sdk_coverage.py  test_sdk_pod_first.py
lemma-stack/: README.md  pyproject.toml
lemma-stack/lemma_stack/: app.py  orchestrate.py  register.py  supervise.py
lemma-stack/tests/: test_install_experience.py  test_manifest.py  test_orchestrate.py  test_register.py  test_specs.py
(+1729 files in other folders)
