[project]
name = "agentbox-client"
version = "0.1.0"
description = "Async Python client for AgentBox manager and private app APIs"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.11.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.128.0",
    "kubernetes>=34.1.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.0",
    "ruff>=0.9.0",
    "uvicorn[standard]>=0.42.0",
    # Dev-only typechecker. See lemma-pod-bundle/pyproject.toml for rationale.
    "pyright>=1.1.0",
] 

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentbox_client*"]

# Ruff formatter + linter. Shared baseline with the rest of the monorepo
# Python packages: Black-compatible format defaults and Ruff's documented
# default rule set (pycodestyle E4/E7/E9 + pyflakes F), stated explicitly so
# contributors know which rules are enforced.
[tool.ruff]
line-length = 100
target-version = "py312"
# `agentbox_client/generated/` is OpenAPI-generated code; keep it out of
# lint/format so regeneration doesn't churn.
extend-exclude = ["agentbox_client/generated"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

# Pyright type-checker: extends the monorepo baseline in ../../pyright.toml.
# `agentbox_client/generated/` is OpenAPI-generated code; keep it out of
# type-checking so regeneration doesn't churn. pythonVersion mirrors the
# package's requires-python.
[tool.pyright]
extends = "../pyright.toml"
pythonVersion = "3.12"
include = ["agentbox_client", "tests"]
exclude = ["agentbox_client/generated"] 
