[project]
name = "agentbox"
version = "0.1.0"
description = "AgentBox sandbox manager and Python client"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "kubernetes>=34.1.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.14.2",
    "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
daytona = [
    "daytona>=0.196.0,<0.198.0",
]
e2b = [
    "e2b==2.32.1",
]
postgres = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[dependency-groups]
dev = [
    "agentbox-client",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.15.0,<0.16.0",
]

[tool.uv.sources]
agentbox-client = { path = "../agentbox-client", editable = true }
