[project]
name = "agentbox"
version = "0.1.0"
description = "AgentBox sandbox manager and Python client"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "kubernetes>=34.1.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "agentbox-client",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.9.0",
    # Dev-only typechecker. See lemma-pod-bundle/pyproject.toml for rationale.
    "pyright>=1.1.0",
] 

[tool.uv.sources]
agentbox-client = { path = "../agentbox-client", editable = true }

# Ruff formatter + linter. Shared baseline with the rest of the monorepo
# Python packages: Black-compatible format defaults and Ruff's documented
# default rule set (pycodestyle E4/E7/E9 + pyflakes F), stated explicitly so
# contributors know which rules are enforced.
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

# Pyright type-checker: extends the monorepo baseline in ../pyright.toml.
# pythonVersion mirrors the package's requires-python.
[tool.pyright]
extends = "../pyright.toml"
pythonVersion = "3.12"
include = ["agentbox", "tests"] 
