[project]
name = "lemma-stack"
version = "0.1.0"
description = "Installer and management tool for a fully-local Lemma stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "rich>=13.9.4",
    "tomlkit>=0.13.0",
    "packaging>=24.0",
]

[project.scripts]
lemma-stack = "lemma_stack.app:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.9.0",
    # Dev-only typechecker. See lemma-pod-bundle/pyproject.toml for rationale.
    "pyright>=1.1.0",
] 

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lemma_stack*"]

[tool.setuptools.package-data]
lemma_stack = ["data/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

# Black-compatible format defaults; declared explicitly so editors and
# `ruff format` invocations agree on style.
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# Ruff's documented default rule set (pycodestyle E4/E7/E9 + pyflakes F),
# stated explicitly so contributors know which rules are enforced.
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "install_experience: Docker-based cross-platform install tests (slow, need Docker for some)",
]

# Pyright type-checker: extends the monorepo baseline in ../../pyright.toml.
# pythonVersion mirrors the package's requires-python.
[tool.pyright]
extends = "../pyright.toml"
pythonVersion = "3.11"
include = ["lemma_stack", "tests"] 
