[project]
name = "lemma-connectors"
version = "0.1.0"
description = "OpenAPI-native native connector packages for Lemma"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=25.3.0",
    "httpx>=0.28.1",
    "json-schema-to-pydantic>=0.4.11",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.56.1",
    "openapi-python-client>=0.28.3",
    # Dev-only typechecker. See lemma-pod-bundle/pyproject.toml for rationale.
    "pyright>=1.1.0",
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lemma_connectors"]

# Pyright type-checker: extends the monorepo baseline at the repo root.
# `src/lemma_connectors/*/generated/` is OpenAPI-generated per-connector
# client code (gmail, google_calendar, ...); keep it out of type-checking so
# regeneration doesn't churn. pythonVersion mirrors this sub-package's
# requires-python (note this differs from the parent lemma-backend which
# targets 3.14 — each is checked with its own [tool.pyright]).
[tool.pyright]
extends = "../../pyright.toml"
pythonVersion = "3.12"
include = ["src/lemma_connectors", "tests"]
exclude = ["src/lemma_connectors/**/generated"] 
